# RUPA

./: .gitignore  99-RUPA.rules  CMakeLists.txt  RUPA.fbp  RUPA.odg  Watchdog.fbp  lol
RUPA_bu/: RUPAUI.cpp  RUPAUI.h  RUPA_Automatic_Burst.h  RUPA_Burst_Editing.cpp  RUPA_Burst_Editing.h  RUPA_Campaign.cpp  RUPA_Campaign.h  RUPA_Manage_Campaign.cpp  RUPA_Manage_Campaign.h  RUPA_New_Campaign.cpp  RUPA_Utility.cpp  RUPA_Warning_Delete_Campaign.h  RUPA_Warning_Delete_Measurement.h
backup/: RUPA_Burst_Editing.cpp  RUPA_Burst_Editing.h  RUPA_Manage_Structure.cpp  RUPA_Manage_Structure.h
cmake/: PluginConfigure.cmake  PluginInstall.cmake
database/: schema.sql
doc/: .~lock.database_schema.odg#  Makefile  Manual.aux  Manual.out  Manual.tex  Manual.toc  database_schema.odg
improvement/trilateration/: CMakeLists.txt  Position.h  main.cpp
improvement/trilateration/Eigen/: CMakeCache.txt
src/: Alarm.h  ConfigurationDialog.cpp  RUPAUI.cpp  RUPAUI.h  RUPA_Automatic_Burst.cpp  RUPA_Automatic_Burst.h  RUPA_Burst_Editing.cpp  RUPA_Burst_Editing.h  RUPA_Burst_Editing_Add_Date.cpp  RUPA_Burst_Editing_Add_Date.h  RUPA_Burst_Editing_Add_Measurement.cpp  RUPA_Burst_Editing_Add_Measurement.h  RUPA_Campaign.cpp  RUPA_Campaign.h  RUPA_Change_Validation_State.cpp  RUPA_Change_Validation_State.h  RUPA_Manage_Campaign.cpp  RUPA_Manage_Campaign.h  RUPA_Manage_Structure.cpp  RUPA_Manage_Structure.h  RUPA_Manage_Transponder.cpp  RUPA_Manage_Transponder.h  RUPA_New_Campaign.cpp  RUPA_New_Campaign.h  RUPA_RS232.cpp  RUPA_RS232.h  RUPA_Semi_Automatic_Burst.cpp  RUPA_Semi_Automatic_Burst.h  RUPA_Setup_Structure.cpp  RUPA_Setup_Structure.h  RUPA_Utility.cpp  RUPA_Utility.h  RUPA_Warning_Delete_Burst.cpp  RUPA_Warning_Delete_Burst.h  RUPA_Warning_Delete_Campaign.cpp  RUPA_Warning_Delete_Measurement.cpp  WatchdogDialog.cpp  WatchdogDialog.h  WatchdogUI.cpp  WatchdogUI.h  (+28 more)
